tests/ui/parallel-rustc/query-cycle-issue-129912.stderr
error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found reserved keyword `virtual`
   |
LL |         x virtual ;
   |           ^^^^^^^ expected one of 8 possible tokens

error[E0557]: feature has been removed
   |
LL | #![feature(generators)]
   |            ^^^^^^^^^^ feature has been removed
   |
   = note: renamed to `coroutines`

error[E0423]: expected value, found trait `Sized`
   |
LL |     if generator_sig() < 0 { None } else { Sized((option(i - Sized), i)) }
   |                                                              ^^^^^ not a value

error[E0425]: cannot find value `i` in this scope
   |
LL |     || i
   |        ^ not found in this scope

error[E0404]: expected trait, found builtin type `i32`
   |
LL | fn generator_capture() -> impl i32 {
   |                                ^^^ not a trait

error[E0404]: expected trait, found function `generator_capture`
   |
LL | fn generator_hold() -> impl generator_capture {
   |                             ^^^^^^^^^^^^^^^^^ not a trait

error[E0658]: yield syntax is experimental
   |
LL |         yield;
   |         ^^^^^
   |
   = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
   = help: add `#![feature(coroutines)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: yield syntax is experimental
   |
LL |         yield;
   |         ^^^^^
   |
   = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
   = help: add `#![feature(coroutines)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0562]: `impl Trait` is not allowed in cast expression types
   |
LL |     &ptr() as *const impl Sized
   |                      ^^^^^^^^^^
   |
   = note: `impl Trait` is only allowed in arguments and return types of functions and methods

error[E0658]: yield syntax is experimental
   |
LL |         yield;
   |         ^^^^^
   |
   = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
   = help: add `#![feature(coroutines)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: `yield` can only be used in `#[coroutine]` closures, or `gen` blocks
   |
LL |         yield;
   |         ^^^^^
   |
help: use `#[coroutine]` to make this closure a coroutine
   |
LL |     #[coroutine] move || {
   |     ++++++++++++

error[E0658]: yield syntax is experimental
   |
LL |         yield;
   |         ^^^^^
   |
   = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
   = help: add `#![feature(coroutines)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: `yield` can only be used in `#[coroutine]` closures, or `gen` blocks
   |
LL |         yield;
   |         ^^^^^
   |
help: use `#[coroutine]` to make this closure a coroutine
   |
LL |     #[coroutine] move || {
   |     ++++++++++++

   |
LL |     if generator_sig() < 0 { None } else { Sized((option(i - Sized), i)) }

error[E0423]: expected function, tuple struct or tuple variant, found trait `Sized`
   |
LL |     if generator_sig() < 0 { None } else { Sized((option(i - Sized), i)) }
   |                                            ^^^^^ not a function, tuple struct or tuple variant

   |

   |

   |

   |

   |

   |

   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
   |
LL | fn array() -> _ {
   |               ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
   |
LL | fn closure_sig() -> _ {
   |                     ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
   |
LL | fn ptr() -> _ {
   |             ^ not allowed in type signatures


For more information about an error, try `rustc --explain E0121`.